--- a/views/component/navbar.ejs
+++ b/views/component/navbar.ejs
@@ -3,7 +3,7 @@
   <head>
     <nav>
       <a href="/">Home</a>
-      <a href="/">Note Management System</a>
+      <a href="/">Note Management</a>
       <a href="/createNote">Add Note</a>
     </nav>
   </head>
