--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,7 @@ main {
     padding: 1rem;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    height: 500px;
 }
 
 #note-form {
